--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
         </div>
        <div class="two"><h2>Reading Challenges</h2></div> 
        <div class="carousel-container">
-            <button class="carousel-btn prev-btn">&lt;</button>
-            <div class="carousel" id="readingchallenges">
+        <input type="radio" name="carousel" id="card1" checked>
+        <input type="radio" name="carousel" id="card2">
+        <input type="radio" name="carousel" id="card3">
+            <div class="carousel">
                 <div class="card">
                     <h5>The Charming Challenge: Read 10 Romance Books Starting with the Letter C</h5>
                     <h6>Goal: Explore romance books that start with "C" and discover hidden gems with this fun letter-themed challenge.</h6>
@@ -97,7 +99,12 @@
                     <p><em>The Holiday Swap</em> by Maggie Knox – Twin sisters trade places for the holidays, bringing double the romance.</p>
                     <p><em>Meet Me Under the Mistletoe</em> by Jenny Bayliss – Friends-to-lovers with a festive, wintry backdrop.</p>
                 </div>
-            <button class="carousel-btn next-btn">&gt;</button>
+            </div>
+            <div class="controls">
+                <label for="card1"></label>
+                <label for="card2"></label>
+                <label for="card3"></label>
+            </div>
         </div>
             <img src="Images/wheels.png">
         </div>
