Added back the radio + display none, this actually allows me to control the labels in the bottom of the cards

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         </div>
        <div class="two"><h2>Reading Challenges</h2></div> 
        <div class="carousel-container">
+        <input type="radio" name="carousel" id="card1" checked>
+        <input type="radio" name="carousel" id="card2">
+        <input type="radio" name="carousel" id="card3">
             <div class="carousel">
                 <div class="card">
                     <h5>The Charming Challenge: Read 10 Romance Books Starting with the Letter C</h5>
