trying to get carousel 2 going correctly, I can't remember the changes i made several weeks ago so now im just trying to start somewhere

--- a/tbr.html
+++ b/tbr.html
@@ -69,7 +69,7 @@
             </div>
 
             <!-- Carousel 2 -->
-            <div class="carousel">
+            <div class="carousel2">
                 <button class="prev" onclick="prevSlide('carousel2')">&#10094;</button>
                 <div class="carousel-content" id="carousel2">
                     <div class="slide"><img src="Images/All time favorites/The Predator.jpg" alt="The Predator"></div>
