--- a/tbr.html
+++ b/tbr.html
@@ -55,9 +55,9 @@
                 </div>
             </div>
         </header>
-        <div class="carousel-container">
+        <div class="carousel-containertbr">
             <!-- Carousel 1 -->
-            <div class="carousel">
+            <div class="carouseltbr">
                 <button class="prev" onclick="prevSlide('carousel1')">&#10094;</button>
                 <div class="carousel-content" id="carousel1">
                     <div class="slide"><img src="Images/Play Along.jpg" alt="Play Along"></div>
@@ -69,7 +69,7 @@
             </div>
 
             <!-- Carousel 2 -->
-            <div class="carousel2">
+            <div class="carouseltbr">
                 <button class="prev" onclick="prevSlide('carousel2')">&#10094;</button>
                 <div class="carousel-content" id="carousel2">
                     <div class="slide"><img src="Images/All time favorites/The Predator.jpg" alt="The Predator"></div>
