--- a/index.html
+++ b/index.html
@@ -15,56 +15,39 @@
     </head>
     <body>
         <header>
-            <div class="leftside">
-                <div>
-                    <img src="Images/logo.png">
-                </div>
+            <div class="topside">
+                <img src="Images/logo.png">
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <div class="nav">
                 <div class=menu>
-                    <h3><a href="index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
-                    <ul>
-                        <li><a href="#readingchallenges">Reading Challenges</a></li>
-                        <li><a href="#monthlyread">Monthly Read</a></li>
-                        <li><a href="#teaofthemonth">Tea of the month</a></li>
-                    </ul>
+                    <h3><a href="index.html">Homepage</a></h3>
                 </div>
                 <div class="menu">
-                    <h3><a href="About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
-                    <ul>
-                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
-                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
-                    </ul>
+                    <h3><a href="About.html">About</a></h3>
                 </div>
                 <div class="menu">
-                    <h3><a href="tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
-                    <ul>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
-                    </ul>
+                    <h3><a href="tbr.html">TBR</a></h3>
                 </div>
                 <div class="menu">
                     <h3>Contact</h3>
-                    <ul>
-                        <li>Contact Me</li>
-                        <li>Join my newsletter</li>
-                        <li>Send a request</li>
-                    </ul>
                 </div>
             </div>
         </header>
         <div class="containerone">
-            <img src="Images/cartoon.jpg">
-            <img src="Images/cloud.png">
-            <h4>Hey, Story Sweeties! 💕</h4>
-            <p>Okay, lovelies, it’s official—you all are now my Story Sweeties! 🍵📚✨ Whether you’re vibing with a good book or binge-reading a new series, we’re in this together. 
-            I wanted to give you all a cute name because this isn’t just a blog—it’s our little cozy corner of the internet where we connect over the feels and the fire reads.
-            Think of it like this: you’ve got your tea, your fave book, and now you’ve got a squad—aka, the Story Sweeties—here to share the love for tender, heartwarming stories. We’re all about the cozy vibes, deep feels, and keeping it real in the book world. 💫
-            So grab your cozy spot, pour yourself something warm, and let’s get lost in these stories together. Welcome to the crew, lovelies! 💖</p>
-            <img src="Images/wheels.png">
+            <div>
+                <img class="profile" src="Images/cartoon.jpg">
+            </div>
+            <div class="introduction">
+                <h4>Hey, Story Sweeties! 💕</h4>
+                <p>Okay, lovelies, it’s official—you all are now my Story Sweeties! 🍵📚✨ Whether you’re vibing with a good book or binge-reading a new series, we’re in this together. 
+                I wanted to give you all a cute name because this isn’t just a blog—it’s our little cozy corner of the internet where we connect over the feels and the fire reads.
+                Think of it like this: you’ve got your tea, your fave book, and now you’ve got a squad—aka, the Story Sweeties—here to share the love for tender, heartwarming stories. We’re all about the cozy vibes, deep feels, and keeping it real in the book world. 💫
+                So grab your cozy spot, pour yourself something warm, and let’s get lost in these stories together. Welcome! 💖</p>
+            </div>
+            <div>
+                <img class="wheel" src="Images/wheels.png">
+            </div>
         </div>
        <div class="two"><h2>Reading Challenges</h2></div> 
        <div class="carousel-container">
