--- a/index.html
+++ b/index.html
@@ -97,27 +97,32 @@
             </div>
         </div>
         <div class="containerthree" id="monthlyread">
-            <div class="three"><h2>Monthly Read</h2></div>
-                <div>
-                    <img src="Images/maxton.jpg">
-                </div>
-                <div>
-                    <h5>Save Me by Mona Kasten: A Story Sweeties Must-Read 💖</h5>
-                    <p>Imagine a world where the quiet bookish girl crosses paths with the untouchable golden boy. 
-                    That’s Save Me by Mona Kasten—a swoon-worthy romance filled with opposites-attract energy, secrets, and just the right amount of drama. 📚✨
-                    Ruby Bell has her life all planned out: work hard, stay invisible, and get out of her small town for good. <br>
-                    Enter James Beaufort, the rich, effortlessly cool bad boy who thrives on breaking rules and turning heads. When their worlds collide, sparks fly (and not always the good kind). 
-                    But beneath the surface, they’re more alike than they think—two souls searching for something real in a world of expectations.
-                    With heart-melting moments, sharp banter, and the kind of chemistry that makes your heart race, Save Me is perfect for anyone who loves enemies-to-lovers vibes with a soft edge. 
-                    It’s got all the feels and then some—like the literary equivalent of sipping your favorite tea on a rainy day. 🍵🌧️ <br>
-                    So, lovelies, grab a cozy blanket, your favorite mug, and settle in for a story that’ll make your heart ache in the best way. 
-                    Ready to dive into the world of Ruby and James? You’re gonna love it! 💕 </p>
-                    <h6>#StorySweetiesApproved 📖✨</h6>
-                </div>
+            <div class="three">
+                <h2>Monthly Read</h2>
+            </div>
+            <div>
+                <img src="Images/maxton.jpg">
+            </div>
+            <div class="description">
+                <h5>Save Me by Mona Kasten: A Story Sweeties Must-Read 💖</h5>
+                <p>Imagine a world where the quiet bookish girl crosses paths with the untouchable golden boy. 
+                That’s Save Me by Mona Kasten—a swoon-worthy romance filled with opposites-attract energy, secrets, and just the right amount of drama. 📚✨
+                Ruby Bell has her life all planned out: work hard, stay invisible, and get out of her small town for good. <br>
+                Enter James Beaufort, the rich, effortlessly cool bad boy who thrives on breaking rules and turning heads. When their worlds collide, sparks fly (and not always the good kind). 
+                But beneath the surface, they’re more alike than they think—two souls searching for something real in a world of expectations.
+                With heart-melting moments, sharp banter, and the kind of chemistry that makes your heart race, Save Me is perfect for anyone who loves enemies-to-lovers vibes with a soft edge. 
+                It’s got all the feels and then some—like the literary equivalent of sipping your favorite tea on a rainy day. 🍵🌧️ <br>
+                So, lovelies, grab a cozy blanket, your favorite mug, and settle in for a story that’ll make your heart ache in the best way. 
+                Ready to dive into the world of Ruby and James? You’re gonna love it! 💕 </p>
+                <h6>#StorySweetiesApproved 📖✨</h6>
+            </div>
         </div>
         <div class="containerfour" id="teaofthemonth">
-            <div class="four"><h2>Tea of the Month</h2></div>
-            <div>
+            <div class="four">
+                <img src="Images/wheels.png">
+                <h2>Tea of the Month</h2>
+            </div>
+            <div class="tea">
                 <img src="Images/chamomile tea.jpg" alt="chamomile tea">
             </div>
             <div>
@@ -126,11 +131,9 @@
                 <p>Whether I’m curled up with a slow-burn love story or diving into an enemies-to-lovers trope, this chamomile tea is always by my side. So, if you’ve never tried it with milk and honey, take this as your sign to give it a go. Trust me—it’s a total game-changer! ☁️✨</p>
                 <p>What’s your go-to tea for those quiet, bookish moments? Let me know—I’m always looking for new ways to make my tea game as heartwarming as the stories I read. 🫖💕</p>
             </div>
-            <img src="Images/wheels.png">
+                
         </div>
         <footer>
-            <h3>Copyright 2024</h3>
-            <h3>Privacy Policy</h3>
             <h3>Created by Fabienne HALLOIN</h3>
             <img src="Images/insta.png">
             <img src="Images/tiktok.png">
