I added the new header layout to my about page, used column instead, and my little pictures were placed in the center instead of the side/corner.

--- a/About.html
+++ b/About.html
@@ -10,50 +10,28 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&family=Solway:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-        <script src="scripts/script.js" defer></script>
     </head>
     <body id="aboutpage">
         <header>
-            <div class="leftside">
-                <div>
-                    <img src="Images/logo.png">
-                </div>
+            <div class="topside">
+                <img src="Images/logo.png">
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
-            <div class="nav">
-                <div class=menu>
-                    <h3><a href="index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
-                    <ul>
-                        <li><a href="#readingchallenges">Reading Challenges</a></li>
-                        <li><a href="#monthlyread">Monthly Read</a></li>
-                        <li><a href="#teaofthemonth">Tea of the month</a></li>
-                    </ul>
+            <nav>
+                <div class="mobilemenu">
+                    <div class=menu>
+                        <h3><a href="index.html">Homepage</a></h3></div>
+                    <div class="menu">
+                        <h3><a href="About.html">About</a></h3>
+                    </div>
+                    <div class="menu">
+                        <h3><a href="tbr.html">TBR</a></h3>
+                    </div>
+                    <div class="menu">
+                        <h3>Contact</h3>
+                    </div>
                 </div>
-                <div class="menu">
-                    <h3><a href="About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
-                    <ul>
-                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
-                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
-                    </ul>
-                </div>
-                <div class="menu">
-                    <h3><a href="tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
-                    <ul>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
-                    </ul>
-                </div>
-                <div class="menu">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li>Contact Me</li>
-                        <li>Join my newsletter</li>
-                        <li>Send a request</li>
-                    </ul>
-                </div>
-            </div>
+            </nav>
         </header>
         <div class="information">
             <div>
@@ -71,14 +49,12 @@
                 <p>Tea, Tales, and Tender Hearts is still in its early stages, but I’m excited to grow this space and connect with fellow readers from all walks of life. I want to make this blog a place where we can enjoy great books, celebrate romance, and bond over the things that make life so beautiful.</p>
                 <img src="Images/roundme.png">
             </div>
-            
         </div>
         <footer>
-            <h3>Copyright 2024</h3>
-            <h3>Privacy Policy</h3>
             <h3>Created by Fabienne HALLOIN</h3>
             <img src="Images/insta.png">
             <img src="Images/tiktok.png">
         </footer>
+        <script src="script.js" defer></script>
     </body>
 </html>
