--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&family=Solway:wght@300;400;500;700;800&display=swap" rel="stylesheet">
-        <script src="scripts/script.js" defer></script>
     </head>
     <body>
         <header>
@@ -19,20 +18,21 @@
                 <img src="Images/logo.png">
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
-            <div class="nav">
-                <div class=menu>
-                    <h3><a href="index.html">Homepage</a></h3>
+            <nav>
+                <div class="mobilemenu">
+                    <div class=menu>
+                        <h3><a href="index.html">Homepage</a></h3></div>
+                    <div class="menu">
+                        <h3><a href="About.html">About</a></h3>
+                    </div>
+                    <div class="menu">
+                        <h3><a href="tbr.html">TBR</a></h3>
+                    </div>
+                    <div class="menu">
+                        <h3>Contact</h3>
+                    </div>
                 </div>
-                <div class="menu">
-                    <h3><a href="About.html">About</a></h3>
-                </div>
-                <div class="menu">
-                    <h3><a href="tbr.html">TBR</a></h3>
-                </div>
-                <div class="menu">
-                    <h3>Contact</h3>
-                </div>
-            </div>
+            </nav>
         </header>
         <div class="containerone">
             <div>
@@ -131,12 +131,12 @@
                 <p>Whether I’m curled up with a slow-burn love story or diving into an enemies-to-lovers trope, this chamomile tea is always by my side. So, if you’ve never tried it with milk and honey, take this as your sign to give it a go. Trust me—it’s a total game-changer! ☁️✨</p>
                 <p>What’s your go-to tea for those quiet, bookish moments? Let me know—I’m always looking for new ways to make my tea game as heartwarming as the stories I read. 🫖💕</p>
             </div>
-                
         </div>
         <footer>
             <h3>Created by Fabienne HALLOIN</h3>
             <img src="Images/insta.png">
             <img src="Images/tiktok.png">
         </footer>
+        <script src="script.js" defer></script>
     </body>
 </html>
