--- a/tbr.html
+++ b/tbr.html
@@ -14,46 +14,22 @@
     </head>
     <body id="tbr">
         <header>
-            <div class="leftside">
-                <div>
-                    <img src="Images/logo.png">
-                </div>
+            <div class="topside">
+                <img src="Images/logo.png">
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
-            <div class="nav">
-                <div class=menu>
-                    <h3><a href="index.html" target="_blank" rel="noopener noreferrer">Homepage</a></h3>
-                    <ul>
-                        <li><a href="#readingchallenges">Reading Challenges</a></li>
-                        <li><a href="#monthlyread">Monthly Read</a></li>
-                        <li><a href="#teaofthemonth">Tea of the month</a></li>
-                    </ul>
+            <nav>
+                <div class="mobilemenu">
+                    <div class=menu>
+                        <h3><a href="index.html">Homepage</a></h3></div>
+                    <div class="menu">
+                        <h3><a href="About.html">About</a></h3>
+                    </div>
+                    <div class="menu">
+                        <h3><a href="tbr.html">TBR</a></h3>
+                    </div>
                 </div>
-                <div class="menu">
-                    <h3><a href="About.html" target="_blank" rel="noopener noreferrer">About</a></h3>
-                    <ul>
-                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About the blog</a></li>
-                        <li><a href="About.html" target="_blank" rel="noopener noreferrer">About me</a></li>
-                    </ul>
-                </div>
-                <div class="menu">
-                    <h3><a href="tbr.html" target="_blank" rel="noopener noreferrer">TBR</a></h3>
-                    <ul>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">KU Top Reads</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">All Time Favorites</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Tropes</a></li>
-                        <li><a href="tbr.html" target="_blank" rel="noopener noreferrer">Reading Orders</a></li>
-                    </ul>
-                </div>
-                <div class="menu">
-                    <h3>Contact</h3>
-                    <ul>
-                        <li>Contact Me</li>
-                        <li>Join my newsletter</li>
-                        <li>Send a request</li>
-                    </ul>
-                </div>
-            </div>
+            </nav>
         </header>
         <div class="carousel-containertbr">
             <!-- Carousel 1 -->
@@ -81,8 +57,6 @@
             </div>
         </div>
         <footer>
-            <h3>Copyright 2024</h3>
-            <h3>Privacy Policy</h3>
             <h3>Created by Fabienne HALLOIN</h3>
             <img src="Images/insta.png">
             <img src="Images/tiktok.png">
