after some tinkering, the menu is appearing, I made the necessary changes in media query but can't be sure until tested on mobile

--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <nav>
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-
                 <ul class="mobilemenu">
                     <li class=menu><h3><a href="index.html">Homepage</a></h3></li>
                     <li class="menu"><h3><a href="About.html">About</a></h3></li>
                     <li class="menu"><h3><a href="tbr.html">TBR</a></h3></li>
                 </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </nav>
         </header>
         <div class="containerone">
@@ -91,7 +90,7 @@
                 </div>
             </div>
             <div>
-                <img src="Images/wheels.png">
+                <img class="wheel" src="Images/wheels.png">
             </div>
         </div>
         <div class="containerthree" id="monthlyread">
@@ -117,7 +116,7 @@
         </div>
         <div class="containerfour" id="teaofthemonth">
             <div class="four">
-                <img src="Images/wheels.png">
+                <img class="wheel" src="Images/wheels.png">
                 <h2>Tea of the Month</h2>
             </div>
             <div class="tea">
