Added the menu to the two other pages.

--- a/About.html
+++ b/About.html
@@ -18,15 +18,15 @@
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <nav>
-                <div class="mobilemenu">
-                    <div class=menu>
-                        <h3><a href="index.html">Homepage</a></h3></div>
-                    <div class="menu">
-                        <h3><a href="About.html">About</a></h3>
-                    </div>
-                    <div class="menu">
-                        <h3><a href="tbr.html">TBR</a></h3>
-                    </div>
+                <ul class="mobilemenu">
+                    <li class=menu><h3><a href="index.html">Homepage</a></h3></li>
+                    <li class="menu"><h3><a href="About.html">About</a></h3></li>
+                    <li class="menu"><h3><a href="tbr.html">TBR</a></h3></li>
+                </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </nav>
         </header>
