figured out what was wrong with my desktop version i forgot to close the div .wrap

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="containerone">
             <div class="wrap">
                 <img class="profile" src="Images/cartoon.jpg">
+            </div>
             <div class="introduction">
                 <h4>Hey, Story Sweeties! 💕</h4>
                 <p>Okay, lovelies, it’s official—you all are now my Story Sweeties! 🍵📚✨ Whether you’re vibing with a good book or binge-reading a new series, we’re in this together. 
