changed margin bottom, for container four and width to be better fit mobile. also adjusted the font size to be slightly bigger

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     <body id="aboutpage">
         <header>
             <div class="topside">
-                <img src="Images/logo.png">
+                <a href="index.html"><img src="Images/logo.png"></a>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <nav>
@@ -23,6 +23,11 @@
                     <li class="menu"><h3><a href="About.html">About</a></h3></li>
                     <li class="menu"><h3><a href="tbr.html">TBR</a></h3></li>
                 </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </nav>
         </header>
         <div class="information">
