--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="topside">
-                <img src="Images/logo.png">
+                <a href="index.html"><img src="Images/logo.png"></a>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <nav>
@@ -131,8 +131,6 @@
         </div>
         <footer>
             <h3>Created by Fabienne HALLOIN</h3>
-            <img src="Images/insta.png">
-            <img src="Images/tiktok.png">
         </footer>
         <script src="script.js" defer></script>
     </body>
