--- a/tbr.html
+++ b/tbr.html
@@ -15,7 +15,7 @@
     <body id="tbr">
         <header>
             <div class="topside">
-                <img src="Images/logo.png">
+                <a href="index.html"><img src="Images/logo.png"></a>
                 <div><h1>Tea, Tales & Tender Hearts</h1></div>
             </div>
             <nav>
@@ -24,6 +24,11 @@
                     <li class="menu"><h3><a href="About.html">About</a></h3></li>
                     <li class="menu"><h3><a href="tbr.html">TBR</a></h3></li>
                 </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </nav>
         </header>
         <div class="carousel-containertbr">
