head thing test

--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
     <head>
         <title>About - Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +40,7 @@
                 <img src="Images/roundbook.png">
             </div>
             <div>
-                <h5>About Me: Just Little Old Me 💕</h5>
+                <h5 id="symp">About Me: Just Little Old Me 💕</h5>
                 <p>Hi! I’m Fabi—a book lover, creative, and a person who believes in the magic of stories. I’ve always been passionate about reading and writing, and creating this blog was my way of sharing that passion with others. Romance novels have always had a special place in my heart, and this space is where I get to share my love for them with you.</p>
                 <p>I’m currently pursuing a master’s degree in multilingual web communication, which blends my passion for digital design and language. I’m fluent in English, Spanish, and French, and I’m working on improving my Portuguese. My love for languages ties closely with my interest in discovering different cultures, especially through food. I find food to be such a deep and personal way to connect with people and their stories, which is why I’m always on the lookout for new culinary experiences when I travel.</p>
                 <p>When I’m not diving into books or exploring new places, I’m likely working on my website or thinking about how to make this blog even more interactive and fun for everyone. Whether I’m working on digital projects, sharing book reviews, or exploring new cultures, I love finding ways to make my passions come together. </p>
