--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             </div>
         </div>
         <footer>
+            <a href="about.html#symp"><button>Sympo</button></a>
             <h3>Created by Fabienne HALLOIN</h3>
         </footer>
         <script src="script.js" defer></script>
