--- a/tbr.html
+++ b/tbr.html
@@ -4,6 +4,7 @@
         <title>TBR - Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,800&family=Fondamento:ital@0;1&display=swap" rel="stylesheet">
