--- a/tbr.html
+++ b/tbr.html
@@ -3,7 +3,7 @@
     <head>
         <title>TBR - Tea, Tales & Tender Hearts</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="tbr.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" media="screen and (max-width: 730px)" href="rmd.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
